# researchops-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  ruff.toml
deploy/hf_spaces/: .env.template  DEPLOY.md  Dockerfile  README.md  app.py
docs/: MCP_INTEGRATION.md
evalset/: topics.jsonl
experiments/benchmark/: aggregate.json  results.jsonl  summary.md
scripts/: benchmark_topics.json  launch_web.sh  quickstart.sh  run_benchmark.py  run_evalset.py  verify_llm_path.py  verify_no_infinite_rollback.py  verify_repo.py  verify_research_quality.py  verify_run_integrity.py
src/researchops/: __init__.py  checkpoint.py  cli.py  config.py  evaluator.py  evaluator_llm.py  models.py  orchestrator.py  supervisor.py  trace.py  utils.py
src/researchops/agents/: __init__.py  base.py  collection.py  collector.py  planner.py  planning.py  qa.py  reader.py  reading.py  verification.py  verifier.py  writer.py  writing.py
src/researchops/api/: __init__.py  app.py  schemas.py
src/researchops/apps/: __init__.py  registry.py
src/researchops/core/: __init__.py  artifacts.py  checkpoint.py  config.py  context.py  interfaces.py  persistence.py  pipeline.py  quality.py  replay.py  state.py  tracing.py
src/researchops/graph/: __init__.py  builder.py  edges.py  nodes.py  state.py
src/researchops/mcp/: __init__.py  adapter.py  resources.py  server.py
src/researchops/prompts/: __init__.py  parser.py  templates.py
src/researchops/reasoning/: __init__.py  anthropic_r.py  base.py  none.py  openai_compat.py  openai_r.py
src/researchops/registry/: __init__.py  builtin.py  manager.py  schema.py
src/researchops/retrieval/: __init__.py  base.py  bm25.py  embedding.py  enhancement.py  hybrid.py
src/researchops/samples/: demo.html  demo.txt
src/researchops/sandbox/: __init__.py  base.py  container.py  proc.py
src/researchops/tools/: arxiv_download.py  arxiv_search.py  cite.py  fetch_page.py  parse_doc.py  sandbox_exec.py  web_search.py
src/researchops/web/: __init__.py  app.py  components.py
tests/: conftest.py  test_arxiv_tools.py  test_checkpoint.py  test_core_abstractions.py  test_evaluator_llm.py  test_fetch_integrity.py  test_graph.py  test_llm_chain.py  test_mcp_adapter.py  test_observability.py  test_platform_modules.py  test_prompts.py  test_registry.py  test_replay.py  test_retrieval.py  test_rollback_loop.py  test_sandbox.py  test_trace.py  test_v03_features.py  test_v11_features.py  test_verifier_selffix.py
(+30 files in other folders)
