[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "researchops"
version = "0.1.0"
description = "Multi-agent research orchestration harness with plan/collect/read/verify/write/qa pipeline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "ResearchOps Contributors" }]
dependencies = [
    "pydantic>=2.0,<3",
    "typer>=0.9,<1",
    "httpx>=0.24,<1",
    "beautifulsoup4>=4.12,<5",
    "pypdf>=4.0,<5",
    "rich>=13.0,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9",
    "ruff>=0.4,<1",
    "pytest-timeout>=2.2,<3",
]

[project.scripts]
researchops = "researchops.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/researchops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
