[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "researchops"
version = "1.0.0"
description = "ResearchOps Harness — multi-agent research orchestration with arXiv-first ingestion, evidence-first writing, sandbox verification, and run-scoped retrieval"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "ResearchOps Contributors" }]
dependencies = [
    "pydantic>=2.0,<3",
    "typer>=0.9,<1",
    "httpx>=0.24,<1",
    "beautifulsoup4>=4.12,<5",
    "pypdf>=4.0,<5",
    "rich>=13.0,<14",
    "rank-bm25>=0.2",
    "langgraph>=0.2,<1",
    "langchain-core>=0.3,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9",
    "ruff>=0.4,<1",
    "pytest-timeout>=2.2,<3",
]
quality = [
    "trafilatura>=1.6",
]
embeddings = [
    "sentence-transformers>=3.0,<4",
    "numpy>=1.26,<3",
]
llm-openai = ["httpx>=0.24,<1"]
llm-anthropic = ["httpx>=0.24,<1"]

[project.scripts]
researchops = "researchops.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/researchops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
